--- a/anmeldetool-web/src/main/web/src/app/app.component.html
+++ b/anmeldetool-web/src/main/web/src/app/app.component.html
@@ -1,22 +1,16 @@
-<ng-container *ngIf="vereineLoaded | async; else loading">
-  <app-nav-bar></app-nav-bar>
-  <ng-container *ngIf="authenticated; else login"> 
-    <router-outlet></router-outlet>
-  </ng-container>
+<!--ng-container *ngIf="vereineLoaded | async; else loading"-->
+<app-nav-bar></app-nav-bar>
+<ng-container *ngIf="authenticated; else login">
+  <router-outlet></router-outlet>
 </ng-container>
+<!--/ng-container-->
 
 <ng-template #login>
-  <div *ngIf="dialogOpen" class="overlay">
-    <!--div [class]="getOverlayContentClass()">
-      <app-login-dialog *ngIf="isShowLogin()" (showPage)="onShowPage($event)"></app-login-dialog>
-      <app-new-anmelder *ngIf="isShowNewAnmelder()" (showPage)="onShowPage($event)"></app-new-anmelder>
-      <app-new-verein *ngIf="isShowNewVerein()" (showPage)="onShowPage($event)"></app-new-verein>
-    </div-->
-  </div>
+  <div *ngIf="dialogOpen" class="overlay"></div>
 </ng-template>
 
-<ng-template #loading>
+<!--ng-template #loading>
   <div class="center">
     <mat-spinner style="margin: 0 auto"></mat-spinner>
   </div>
-</ng-template>
+</ng-template-->
