--- a/anmeldetool-web/src/main/web/src/app/events/events-detail/events-detail.component.css
+++ b/anmeldetool-web/src/main/web/src/app/events/events-detail/events-detail.component.css
@@ -19,6 +19,11 @@
   padding-left: 5px;
   padding-right: 5px;
 }
+.padding {
+  margin-top: 10px;
+  margin-left: 15px;
+  margin-bottom: 5px;
+}
 h3 {
   font-weight: 500;
   margin-bottom: 0px;
