--- a/anmeldetool-web/src/main/web/src/app/verein/profile/role-form/role-form.component.css
+++ b/anmeldetool-web/src/main/web/src/app/verein/profile/role-form/role-form.component.css
@@ -1,20 +1,24 @@
 mat-form-field {
   min-width: 400px;
 }
-.div-disable{
-  pointer-events:none;
+.div-disable {
+  pointer-events: none;
 }
 .block {
   display: block;
 }
 h2 {
-  color: rgba(0,0,0,.54);
+  color: rgba(0, 0, 0, 0.54);
+  margin-top: 10px;
+  margin-bottom: 5px;
+  margin-left: 10px;
+  background-color: white;
 }
 h1 {
   margin-left: 15px;
 }
 .label {
-  color: rgba(0,0,0,.54);
+  color: rgba(0, 0, 0, 0.54);
 }
 .label-green {
   color: rgba(57, 124, 57, 0.68);
@@ -45,12 +49,10 @@ h1 {
   border-radius: 4px;
   overflow: hidden;
   display: block;
-  max-width: 240px;
 }
 
 .drag-drop-box {
-  padding: 20px 10px;
-  border-bottom: solid 1px #ccc;
+  padding: 10px 5px;
   color: rgba(0, 0, 0, 0.87);
   display: flex;
   flex-direction: row;
@@ -60,7 +62,6 @@ h1 {
   cursor: move;
   background: white;
   font-size: 14px;
-  max-width: 240px;
   flex-wrap: wrap;
 }
 
@@ -68,8 +69,7 @@ h1 {
   box-sizing: border-box;
   border-radius: 4px;
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-              0 8px 10px 1px rgba(0, 0, 0, 0.14),
-              0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 
 .cdk-drag-placeholder {
@@ -88,24 +88,23 @@ h1 {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-
 em {
-    float: right;
-    color: #E05C65;
-    padding-left: 10px;
+  float: right;
+  color: #e05c65;
+  padding-left: 10px;
 }
 .error input {
-    background-color: #E3C3C5;
+  background-color: #e3c3c5;
 }
 .error ::-webkit-input-placeholder {
-    color: #999;
+  color: #999;
 }
 .error ::-moz-placeholder {
-    color: #999;
+  color: #999;
 }
-.error :-moz-placeholder{
-    color: #999;
+.error :-moz-placeholder {
+  color: #999;
 }
 .error :-ms-input-placeholder {
-    color: #999;
+  color: #999;
 }
